# phonema-ng

./: .gitignore  README.md  config.yaml  pip-requirements-11.txt  pip-requirements-12.txt  pip-requirements.txt
callbacks/: cpu_temperature_monitor.py
phonema/model/: __init__.py  conformer_model.py
phonemizer/: libg2p.py  load_config.py  normalize.py
scripts/: convert_mp3_to_wav.py  convert_mp3_to_wav_all.py  create_frame_targets.py  create_frame_targets_all.py  create_shuffled_index_all.py  extract_mels  extract_mels.py  extract_mels_all.py  inspect_sample.py  phonemize.py  phonemize_all.py  prepare_tf_dataset.py  stream_inference.py  train.py  viterbi_matrix.py
src/extract_mels/: CMakeLists.txt  extract_mels.cpp
tests/: espeak-ng.py  test_inference.py  test_mel_extraction.py  verify_data_integrity.py
utils/: audio.py  config.py  dataset.py  index_dataset.py  phoneme_map.py  positional_encoding.py  viterbi.py
